syntax = "proto3";

option go_package = "github.com/wrgl/core/pkg/objects";

import "google/protobuf/timestamp.proto";

enum TableType {
    TS_UNSPECIFIED = 0;
    TS_SMALL = 1;
    TS_BIG = 2;
}

message SmallTable {
    // name of each column
    repeated string columns = 1;

    // indices of primary key columns
    repeated uint32 pk = 2;

    // each row is 32 bytes: 16-bytes key sum and 16-bytes row sum concatenated
    repeated bytes rows = 3;
}

message BigTable {
    // name of each column
    repeated string columns = 1;

    // indices of primary key columns
    repeated uint32 pk = 2;

    // TODO: replace this with index_sum
    bytes row_store_id = 3;
}

message Author {
    string name = 1;
    string email = 2;
}

message Commit {
    Author author = 1;
    string message = 2;
    google.protobuf.Timestamp timestamp = 3;

    // 16-bytes meow checksum of previous commit
    bytes prev_commit_sum = 4;

    TableType table_type = 5;

    // 16-bytes meow checksum of table
    bytes table_sum = 6;
}

message Branch {
    // 16-bytes meow checksum of latest commit
    bytes commit_sum = 1;
}